overflow x footer img fixed

--- a/style.css
+++ b/style.css
@@ -425,6 +425,6 @@ body {
     margin-left: 21rem;
 }
 
-.thirten{
+.thirten img{
     width: 100%;
 }
